# stardew-vision

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  FIRST_THING.md  LESSONS_LEARNED.md  NEXT_SESSION_START_HERE.md  QUICKSTART.md  README.md  REBUILD_ALL_SERVICES.sh  REBUILD_OCR_TOOL.sh  REBUILD_PIERRES_BUYING_TOOL.sh  SESSION_STATE.md  TALK_OUTLINE.md  annotation_viewer.html  interesing-points.md  main.py  pyproject.toml  rocm-provided.txt  setup-project.sh  sprite_catalog.html  sprite_catalog_basic.html  test-gpu.py
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  setup-environment.sh
agent-learning/: README.md
agent-learning/docs/: smolagents-quickstart.md
agent-learning/examples/: module2_smolagents_basic.py  module4_production_wrapper.py  module6_conference_demo.py
agent-learning/exercises/: exercise3_debugging.md
agent-learning/modules/: module3-vllm-integration.md  module4-production-wrapper.md  module5-fastapi-integration.md  module6-conference-demos.md
agent-learning/resources/: smolagents-cheatsheet.md  sources.md
configs/: annotation_schema.json  output_schema.json
configs/serving/: qwen2_5_vl_tool_template.jinja
configs/serving/openshift/: 00-BUILD-INSTRUCTIONS.md  00-namespace.yaml  01-configmap-templates.yaml  02-configmap-chat-template.yaml  02-pvc-paddlex-cache-ocr-tools.yaml  02-pvc-paddlex-cache.yaml  03-pvc-hf-cache.yaml  04-pvc-errors.yaml  05-objectbucketclaim.yaml  06-configmap-service-endpoints.yaml  10-deployment-ocr-tool.yaml  20-deployment-tts-tool.yaml  (+6 more)
data/dev/: benchmark_ocr.py  show_raw_ocr.py  show_subregion_ocr.py  test_ocr_raw.py
datasets/: COLLECTION_CHECKLIST.md
datasets/assets/: EXTRACTION_SUMMARY.md  README.md  item_manifest.json  metadata.md  sprite_layout_notes.md  sprites
datasets/caught_fish/: README.md
datasets/game_letter/: README.md  quality_report.json
datasets/level_up/: README.md
datasets/pierre_shop/: README.md  annotations.jsonl  quality_report.json
datasets/quest_board/: README.md
datasets/tv_dialog/: README.md
demos/: README.md  curriculum.md
demos/diagrams/: codeagent-execution.txt  fastapi-integration.txt  phase-progression.txt  production-pipeline.txt  tool-calling-flow.txt  vllm-architecture.txt
demos/docs/: best-practices-2026.md  framework-decision.md
demos/examples/: module1_manual_dispatch.py  module3_smolagents_vllm.py  module5_fastapi_integration.py
demos/exercises/: exercise1_tool_creation.md  exercise2_agent_config.md
demos/modules/: README.md  module1-manual-dispatch.md  module2-smolagents-basics.md
deploy/: build-images.sh  deploy-to-openshift.sh  docker-compose.yml  make-packages-public.sh  run-local.sh  start_vllm_host.sh
docs/: ANNOTATION_WORKFLOW.md  ASSET_EXTRACTION_CHANGELOG.md  DEPLOYING_MODELS_KSERVE.md  DEPLOYING_MODELS_QUICKSTART.md  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_STATUS.md  SESSION_HANDOFF_2026-03-31.md  TESTING_AGENT_LOOP.md  agent-frameworks-compared.md  architecture-pivot-plan.md  data-collection-plan.md  deployment-status.md  getting-guis-to-work-with-devcontainers-wayland.md  ocr-choice.md  overlay-collection-guide.md  phase2-collection-plan.md  plan.md  screen-ocr-analysis.md  talk-abstract.md  training-data-collection.md  ui-screenshot-collection.md  user-submission-guide.md  vllm-notes.md
docs/adr/: 000-adr-template.md  001-vlm-selection.md  002-vlm-role-architecture.md  003-tts-selection.md  004-repo-structure.md  005-serving-strategy.md  006-feature-store-strategy.md  007-overlay-detection-strategy.md  008-grid-detection-strategy.md  009-agent-tool-calling-architecture.md  010-screen-region-extraction.md  011-agent-loop-refinements.md  012-openshift-deployment-architecture.md
scripts/: annotate_pierre_shop.py  debug_bg_composite.py  debug_caught_fish_crops.py  debug_caught_fish_results.py  debug_color_compare.py  debug_shape_matching.py  debug_sprite_overlay.py  debug_tighter_crop.py  debug_training_method.py  eval_crop_quality.py  eval_ocr_quality.py  extract_anchor_template.py  resolve-dependencies.py  show_raw_ocr.py  show_subregion_ocr.py  start_vllm_host.sh  test_extraction_tool.py  test_ocr_on_panel.py  verify_ui_screenshots.py  view_sprites.py
services/coordinator/: Dockerfile  pyproject.toml
services/coordinator/stardew_coordinator/: agent_loop.py  agent_loop_finetuned.py  app.py  app_finetuned.py  routes.py  tool_definitions.py  tool_definitions_finetuned.py
services/coordinator/stardew_coordinator/static/: index.html
services/ocr-tool/: Dockerfile  pyproject.toml
services/ocr-tool/stardew_ocr/: app.py  crop_pierres_detail_panel.py
services/ocr-tools/: Dockerfile  pyproject.toml
services/ocr-tools/assets/: item_manifest.json
services/ocr-tools/assets/templates/: caught_fish_layout.json  tv_dialog_layout.json
services/ocr-tools/stardew_ocr_tools/: app.py  common.py  crop_caught_fish.py  crop_pierres_detail_panel.py  crop_tv_dialog.py
services/pierres_buying_tool/: Dockerfile  pyproject.toml
services/tts-tool/: Dockerfile  pyproject.toml
template_docs/: CLAUDE.md  QUICKSTART.md  README.md  notesOnRocm72.md
tests/: test_tools.py
tmp/: SESSION_HANDOFF.md  memory_feedback_uv_only.md  memory_user_profile.md  memory_vllm_tool_calling.md  notes.md
training/: README.md
(+61 files in other folders)
