[project]
name = "stardew-vision"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "ruff>=0.4.0",
    "transformers>=4.46.0",
    "peft>=0.13.0",
    "accelerate>=1.0.0",
    "trl>=0.12.0",
    "datasets>=3.0.0",
    "huggingface-hub>=0.25.0",
    "mlflow>=2.17.0",
    "soundfile>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "openai>=1.50.0",
    "opencv-python>=4.9.0",
    "paddlepaddle==3.2.0",
    "paddleocr>=3.0.0",
    "rapidfuzz>=3.9.0",
    "jsonschema>=4.23.0",
    "evaluate>=0.4.0",
]

[tool.uv]
exclude-dependencies = [
    "apex",
    "contourpy",
    "cxxfilt",
    "cycler",
    "filelock",
    "fonttools",
    "fsspec",
    "hypothesis",
    "iniconfig",
    "jinja2",
    "kiwisolver",
    "markupsafe",
    "matplotlib",
    "mpmath",
    "networkx",
    "ninja",
    "numpy",
    "packaging",
    "pandas",
    "pillow",
    "pip",
    "pluggy",
    "pygments",
    "pyparsing",
    "pytest",
    "python-dateutil",
    "pyyaml",
    "scipy",
    "setuptools",
    "six",
    "sortedcontainers",
    "sympy",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm",
    "triton",
    "typing-extensions",
    "uv",
]
