[project]
name = "stardew-ocr-tool"
version = "0.1.0"
description = "OCR extraction microservice for Stardew Vision"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "opencv-python-headless>=4.9.0",
    "paddlepaddle==3.2.0",
    "paddleocr>=3.0.0",
    "numpy",
    "pillow",
]
